# Tugas-Interkoneksi

./: Laporan Kelompok 12 Interkoneksi System Instrumentasi 4B.docx  README.md  Salinan dari Blue and Black Modern Futuristic AI Technology Presentation.pptx
TugasKuliah/IPFS/: truffle-config.js
TugasKuliah/IPFS/contracts/: IPFS.sol
TugasKuliah/blockchain/: truffle-config.js
TugasKuliah/blockchain/contracts/: SensorData.sol  SensorStorage.sol
TugasKuliah/blockchain/migrations/: 2_deploy_sensor.js
TugasKuliah/qt/: gui.py
TugasKuliah/sensor/: Cargo.toml
TugasKuliah/sensor/src/: main.rs
TugasKuliah/sensor_render/src/: main.rs
TugasKuliah/server/: Cargo.toml
TugasKuliah/server/abis/: IPFS.json
TugasKuliah/server/src/: main.rs
TugasKuliah/tcp_server/frontend/: index.html
TugasKuliah/tcp_server/src/: main.rs
TugasKuliah/web/src/: App.jsx  style.css
TugasKuliah/web/src/abis/: SensorData.json
yusron_server/: Cargo.toml
yusron_tampan/src/: main.rs
